--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ plugins:     ./_plugins
 future:      true
 lsi:         false
 pygments:    true
-markdown:    maruku
+markdown:    kramdown
 permalink:   date
 
 maruku:
@@ -22,3 +22,10 @@ maruku:
 
 rdiscount:
   extensions: []
+
+kramdown:
+  auto_ids: true,
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  use_coderay: false
