--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ plugins:     ./_plugins
 future:      true
 lsi:         false
 pygments:    true
-markdown:    kramdown
+markdown:    redcarpet
 permalink:   date
 
 maruku:
@@ -22,6 +22,9 @@ maruku:
 
 rdiscount:
   extensions: []
+
+redcarpet:
+  extensions: [autolink, no_intraemphasis, fenced_code, gh_blockcode]
 
 kramdown:
   auto_ids: true,
